--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,11 @@ h1 {
 }
 
 h2 {
+  font-weight: 800;
   font-size: 5.1em;
   line-height: 1em;
-  letter-spacing: .03em;
-  margin-bottom: 2px;
+  letter-spacing: .00em;
+  
 }
 
 h3 {
@@ -50,7 +51,8 @@ h4 {
   font-weight: normal;
   font-size: .7em;
   letter-spacing: .4em;
-  margin-bottom: 9px;
+  margin-bottom: 6px;
+  margin-top: 6px;
   line-height: 1em;
 }
 
@@ -108,5 +110,5 @@ img {
   height: 165px;
   background: rgba(247,211,27,1);
   margin-left: 163px;
-  padding-top: 25px;
+  padding-top: 18px;
 }
